Let File.toURL() handle the / and \